@@ -1,3 +1,9 @@
+TAG: egload-tr9773-4
+DATE: 03/08/2010
+STAFF: sc
+CHANGES: MGI 4.33 TR9773 Links to Gene Model Evidence
+1) Added comments
+
 TAG: egload-tr9773-3
 DATE: 02/18/2010
 STAFF: sc
